// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UpkRadialBarChart /> should render correctly with full props and window's width 1036 1`] = `
<UpkRadialBarChart
  data={
    Array [
      Object {
        "fill": "red",
        "name": "Name",
        "value": 0,
      },
    ]
  }
  percentValue={true}
>
  <styled__ChartWrapper
    height="300px"
  >
    <div
      className="styled__ChartWrapper-sc-18uhklm-0 cumIDA"
      height="300px"
    >
      <ResponsiveContainer
        debounce={0}
        height="100%"
        width="100%"
      >
        <div
          className="recharts-responsive-container"
          style={
            Object {
              "height": "100%",
              "maxHeight": undefined,
              "minHeight": undefined,
              "minWidth": undefined,
              "width": "100%",
            }
          }
        >
          <RadialBarChart
            barCategoryGap="10%"
            barGap={4}
            barSize={28}
            cx="50%"
            cy="50%"
            data={
              Array [
                Object {
                  "fill": "red",
                  "name": "Name",
                  "value": 0,
                },
              ]
            }
            endAngle={-30}
            height={0}
            innerRadius="70%"
            layout="radial"
            margin={
              Object {
                "bottom": 5,
                "left": 5,
                "right": 5,
                "top": 5,
              }
            }
            outerRadius="100%"
            reverseStackOrder={false}
            stackOffset="none"
            startAngle={210}
            width={0}
          />
          <ResizeDetector
            handleHeight={true}
            handleWidth={true}
            onResize={[Function]}
            refreshRate={1000}
            resizableElementId=""
            skipOnMount={false}
          >
            <div
              style={
                Object {
                  "display": "none",
                  "height": 0,
                  "position": "absolute",
                  "visibility": "hidden",
                  "width": 0,
                }
              }
            />
          </ResizeDetector>
        </div>
      </ResponsiveContainer>
    </div>
  </styled__ChartWrapper>
</UpkRadialBarChart>
`;

exports[`<UpkRadialBarChart /> should render correctly with mandatory props 1`] = `
<UpkRadialBarChart
  data={
    Array [
      Object {
        "fill": "red",
        "name": "Name",
        "value": 0,
      },
    ]
  }
>
  <styled__ChartWrapper
    height="300px"
  >
    <div
      className="styled__ChartWrapper-sc-18uhklm-0 cumIDA"
      height="300px"
    >
      <ResponsiveContainer
        debounce={0}
        height="100%"
        width="100%"
      >
        <div
          className="recharts-responsive-container"
          style={
            Object {
              "height": "100%",
              "maxHeight": undefined,
              "minHeight": undefined,
              "minWidth": undefined,
              "width": "100%",
            }
          }
        >
          <RadialBarChart
            barCategoryGap="10%"
            barGap={4}
            barSize={28}
            cx="50%"
            cy="50%"
            data={
              Array [
                Object {
                  "fill": "red",
                  "name": "Name",
                  "value": 0,
                },
              ]
            }
            endAngle={-30}
            height={0}
            innerRadius="70%"
            layout="radial"
            margin={
              Object {
                "bottom": 5,
                "left": 5,
                "right": 5,
                "top": 5,
              }
            }
            outerRadius="100%"
            reverseStackOrder={false}
            stackOffset="none"
            startAngle={210}
            width={0}
          />
          <ResizeDetector
            handleHeight={true}
            handleWidth={true}
            onResize={[Function]}
            refreshRate={1000}
            resizableElementId=""
            skipOnMount={false}
          >
            <div
              style={
                Object {
                  "display": "none",
                  "height": 0,
                  "position": "absolute",
                  "visibility": "hidden",
                  "width": 0,
                }
              }
            />
          </ResizeDetector>
        </div>
      </ResponsiveContainer>
    </div>
  </styled__ChartWrapper>
</UpkRadialBarChart>
`;
